--- a/play-page.html
+++ b/play-page.html
@@ -128,7 +128,7 @@
 
         </div>
     </div>
-    <!--dowload-->
+    <!--download-->
     <div class="download">
         <h2 class="download-title">Download Movie</h2>
         <div class="download-link">
