--- a/Favorite.html
+++ b/Favorite.html
@@ -62,12 +62,68 @@
             </div>
         </div>
     </header>
-    <section class="favorite container">
+    <section class="movies container" id="movies">
+        <!--heading-->
         <div class="heading">
-            <h2 class="heading-title">Yêu thích</h2>
+            <h2 class="heading-title">Yêu thích<</h2>
         </div>
-        <div class="favorite-content" id="favorite-content">
-            <!-- Movie boxes will be appended here by JavaScript -->
+        <!--movies content-->
+        <div class="movies-content">
+            <!--movies box1-->
+            <div class="movie-box">
+                <img src="img/movie-1.jpg" alt="" class="movie-box-img">
+                <div class="box-text">
+                    <h2 class="movie-title">Jumanji: Welcome to the Jungle</h2>
+                    <span class="movie-type">Action/Comedy</span>
+                    <a href="play-page.html" class="watch-btn play-btn">
+                        <i class='bx bx-right-arrow'></i>
+                    </a>
+                    <a href="#" class="favorite-btn" data-id="movie9">
+                        <i class='bx bxs-star'></i>
+                    </a>
+                </div>
+            </div>
+            <div class="movie-box">
+                <img src="img/movie-2.jpg" alt="" class="movie-box-img">
+                <div class="box-text">
+                    <h2 class="movie-title">Hitman's Wife 's Bodyguard</h2>
+                    <span class="movie-type">Action</span>
+                    <a href="#" class="watch-btn play-btn">
+                        <i class='bx bx-right-arrow'></i>
+                    </a>
+                    <a href="#" class="favorite-btn" data-id="movie10">
+                        <i class='bx bxs-star'></i>
+                    </a>
+                </div>
+            </div>
+            <!--movies box3-->
+            <div class="movie-box">
+                <img src="img/movie-3.jpg" alt="" class="movie-box-img">
+                <div class="box-text">
+                    <h2 class="movie-title">Shang-chi</h2>
+                    <span class="movie-type">Action/Comedy</span>
+                    <a href="#" class="watch-btn play-btn">
+                        <i class='bx bx-right-arrow'></i>
+                    </a>
+                    <a href="#" class="favorite-btn" data-id="movie11">
+                        <i class='bx bxs-star'></i>
+                    </a>
+                </div>
+            </div>
+            <!--movies box4-->
+            <div class="movie-box">
+                <img src="img/movie-4.jpg" alt="" class="movie-box-img">
+                <div class="box-text">
+                    <h2 class="movie-title">Eternals</h2>
+                    <span class="movie-type">Action</span>
+                    <a href="#" class="watch-btn play-btn">
+                        <i class='bx bx-right-arrow'></i>
+                    </a>
+                    <a href="#" class="favorite-btn" data-id="movie12">
+                        <i class='bx bxs-star'></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
