--- a/play-page.html
+++ b/play-page.html
@@ -21,7 +21,7 @@
         <!--nav-->
         <div class="nav container">
             <!--logo-->
-            <a href="index.html" class="logo">
+            <a href="index.php" class="logo">
                 Phim <span>moi</span>
             </a>
             <!--search-box-->
@@ -30,12 +30,12 @@
                 <i class='bx bx-search'></i>
             </div>
             <!--user-->
-            <a href="#" class="user">
+            <a href="Login.html" class="user">
                 <img src="img/user.png" alt="" class="user-img">
             </a>
             <!--nav-bar-->
             <div class="nav-bar">
-                <a href="index.html" class="nav-link nav-active">
+                <a href="index.php" class="nav-link nav-active">
                     <i class='bx bx-home'></i>
                     <span class="nav-link-title">Trang chu</span>
                 </a>
@@ -51,10 +51,11 @@
                     <i class='bx bx-tv'></i>
                     <span class="nav-link-title">Phim</span>
                 </a>
-                <a href="Favorite.html" class="nav-link">
+                <a href="Favorite_view.php" class="nav-link">
                     <i class='bx bx-star'></i>
                     <span class="nav-link-title">Yêu thích</span>
                 </a>
+                <a href="logout.php" class="logout-btn">Đăng xuất</a>
             </div>
         </div>
     </header>
